fixed-nav-z-index

--- a/src/components/header-menu-desktop/style.scss
+++ b/src/components/header-menu-desktop/style.scss
@@ -16,6 +16,7 @@
   &:hover {
     .header-dropdown-menu {
       display: block;
+      z-index: 1;
     }
   }
 
