--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -41,7 +41,7 @@
     top: 32px;
 
     background-color: white;
-    z-index: 1;
+    z-index: 2;
   }
 
   .overlay {
@@ -51,6 +51,7 @@
     position: absolute;
     opacity: 0.5;
     top: 32px;
+    z-index: 1;
   }
 }
 
